# immich-motion-deduplicator

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.example.yml  pyproject.toml
.github/workflows/: build.yml  ci.yml
immich_motion_deduplicator/: __init__.py  __main__.py  config.py  delete_assets.py  get_ids.py  scan_library.py  ui.py
tests/: test_cli.py  test_config.py
